# pw_homework_module_9

./: .gitignore  README.md  authors.json  docker-compose.yml  main.py  models.py  pyproject.toml  quotes.json  scraper.py  seed.py
